Add field encounter curio followups
